--- a/sass/_home-new.scss
+++ b/sass/_home-new.scss
@@ -1,4 +1,14 @@
 .home{
+
+    #logo-dark{
+        opacity:0;
+        transition:all 0.4s linear;
+    }
+    
+    .scrolled #logo-dark{
+        opacity:1;
+    }
+
     h1{
         font-size: 25px;
         text-align: center;
@@ -9,7 +19,35 @@
             text-align:center;
         }
     }
+
     h3{
         margin:50px 0;
     }
+
+    .gazebo-text{
+        font-size:20px;
+        color:rgb(81, 81, 80);
+        line-height:34px;
+        font-family:Arial, Helvetica, sans-serif;
+    }
+
+    .collectible-cell{
+        color:#474747;
+        font-size:16px;
+        font-family:Arial, Helvetica, sans-serif;
+        text-transform:uppercase;
+        text-align:center;
+    }
+
+    .flickity-viewport{
+        height:385px;
+    }
+
+    .collectible-cell img{
+        width:100%;
+        padding:30px;
+        height:100%;
+    }
+
+    
 }
