--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,8 +2,9 @@
 
 @import "reset";
 @import "variables";
+@import "home-new";
 @import "global";
 @import "original";
 @import "characters";
 @import "films";
-@import "home-new";
+@import "blog";
