added single posts

--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -1,7 +1,52 @@
 .blog{
     #blog-wrap{
+        margin:0 auto;
         img{
             max-height:190px;
+            max-width:100%;
+        }
+
+        .cat-name{
+            font-family:'trajan-regular-pro';
+            margin-bottom:13px;
+        }
+
+        .blog-item{
+            margin: 40px 0;
+                h2{
+                    font-size: 25px;
+                    font-weight: bold;
+                    margin: 20px 0;
+                }
         }
     }
+
+    .blog-bg{
+        display:flex;
+        align-items: center;
+            h2{
+                font-size:44px;
+                font-family: 'trajan-regular-pro';
+                color: #fff;
+                font-weight:bold;
+            }
+    }
+
+    hr{
+        background: #41ad49;
+        height: 2.5px;
+        border-radius: 5px;
+        max-width:1045px;
+    }
+
+    .latest{
+        max-width: 1045px;
+        margin: 0 auto;
+        font-family: 'trajan-regular-pro';
+        font-weight: bold;
+        font-size: 35px;
+        color: #28a745;
+    }
+
+
 }
