--- a/style.css
+++ b/style.css
@@ -104,6 +104,19 @@ table {
   padding: 30px;
   height: 100%; }
 
+.home .character-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .home .character-slide p {
+    position: absolute;
+    bottom: 0;
+    color: #fff;
+    font-family: "trajan-regular-pro"; }
+
 .site-header {
   height: 72px; }
 
@@ -188,6 +201,9 @@ p {
   font-size: 15px;
   line-height: 30px;
   padding: 20px; }
+
+strong {
+  font-weight: bold; }
 
 .post-575-title {
   height: 670px;
@@ -1355,11 +1371,6 @@ button.mfp-arrow-left, button.mfp-arrow-right {
   -webkit-transform: rotate(0deg);
           transform: rotate(0deg); }
 
-.blog img, .category.archive .page-content img {
-  max-height: 365px;
-  -o-object-fit: cover;
-     object-fit: cover; }
-
 #categories-4 ul li {
   display: none; }
 
@@ -1462,6 +1473,9 @@ button.mfp-arrow-left, button.mfp-arrow-right {
   font-family: 'trajan-regular-pro';
   background: #41ad49;
   padding-top: 45px; }
+
+#blog-bg {
+  height: 50vh !important; }
 
 .fadeOut {
   opacity: 0; }
@@ -1840,5 +1854,151 @@ header {
 .page-template-films-page .book-screen {
   margin: 65px 0; }
 
-.blog #blog-wrap img {
-  max-height: 190px; }
+.blog #blog-wrap {
+  margin: 0 auto; }
+  .blog #blog-wrap img {
+    max-height: 190px;
+    max-width: 100%; }
+  .blog #blog-wrap .cat-name {
+    font-family: 'trajan-regular-pro';
+    margin-bottom: 13px; }
+  .blog #blog-wrap .blog-item {
+    margin: 40px 0; }
+    .blog #blog-wrap .blog-item h2 {
+      font-size: 25px;
+      font-weight: bold;
+      margin: 20px 0; }
+
+.blog .blog-bg {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .blog .blog-bg h2 {
+    font-size: 44px;
+    font-family: 'trajan-regular-pro';
+    color: #fff;
+    font-weight: bold; }
+
+.blog hr {
+  background: #41ad49;
+  height: 2.5px;
+  border-radius: 5px;
+  max-width: 1045px; }
+
+.blog .latest {
+  max-width: 1045px;
+  margin: 0 auto;
+  font-family: 'trajan-regular-pro';
+  font-weight: bold;
+  font-size: 35px;
+  color: #28a745; }
+
+.single-post header {
+  position: static; }
+
+.single-post h1 {
+  font-family: "trajan-regular-pro";
+  font-size: 27px;
+  font-weight: bold; }
+
+.single-post .blog-img img {
+  width: 100%;
+  margin: 40px 0; }
+
+.single-post .single-post-wrap {
+  margin: 0 auto; }
+
+.single-post h3 {
+  font-family: "trajan-regular-pro";
+  margin: 40px 0;
+  font-size: 21px;
+  font-weight: bold; }
+
+.single-post .inner-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+  .single-post .inner-social i {
+    font-size: 30px;
+    margin: 13px;
+    background: grey;
+    width: 45px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-radius: 50%;
+    height: 45px;
+    color: #fff; }
+
+.single-post .wpcf7-email {
+  max-width: 200px; }
+
+.single-post .env-wrap, .single-post .mail-wrap {
+  text-align: center; }
+
+.single-post .mail-wrap input {
+  padding: 10px 5px; }
+
+.single-post .fa-envelope-open-text {
+  font-size: 50px;
+  margin: 25px; }
+
+.single-post h4 {
+  font-family: "trajan-regular-pro";
+  margin: 10px 0; }
+
+.single-post .wpcf7-submit {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  color: #fff;
+  border: none;
+  background: #27ae60;
+  margin: 20px;
+  padding: 10px 55px;
+  font-family: "trajan-regular-pro";
+  font-size: 19px; }
+
+.single-post #wpcf7-f32237-p26585-o1 {
+  text-align: center; }
+
+.single-post .recent {
+  margin: 10px 0; }
+
+.single-post .cat-item {
+  font-family: Arial, Helvetica, sans-serif;
+  list-style: none;
+  margin: 10px 0; }
+
+.single-post .shop-anne-btn {
+  width: 100%;
+  display: inline-block;
+  border: 2px solid #8b8989;
+  border-radius: 8px;
+  text-align: center;
+  padding: 19px;
+  -webkit-box-shadow: -6px 3px 26px 0 rgba(0, 0, 0, 0.11);
+          box-shadow: -6px 3px 26px 0 rgba(0, 0, 0, 0.11);
+  color: #8b8989;
+  font-family: "trajan-regular-pro"; }
+
+.single-post .single-blog-meta {
+  margin: 40px 0; }
+
+.single-post hr {
+  background: #41ad49;
+  width: 100%vw; }
+
+header {
+  display: none; }
