--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -52,6 +52,8 @@ body .site-header a, .site-header button{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding:0 15px;
+    text-transform:uppercase;
 }
 
 
@@ -73,7 +75,7 @@ body .site-header a, .site-header button{
     display:none;
 }
 
-.btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show>.btn-secondary.dropdown-toggle{
+.btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active{
     color: #000;
     background-color: transparent;
     border:none;
@@ -96,3 +98,214 @@ p{
 strong{
     font-weight:bold;
 }
+
+.show>.btn-secondary.dropdown-toggle{
+    background-color: transparent;
+    border-color: transparent;
+    border:none;
+}
+
+@media (max-width:770px){
+    .home{
+        .col-lg-3.col-md-6{
+            text-align:center;
+            margin-bottom:40px;
+        }
+
+        .wp-image-29564 {
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
+.scrolled .show>.btn-secondary.dropdown-toggle {
+    color: #000;
+}
+
+.dropdown-menu{
+    transform: translate3d(-20%, 19px, 0px) !important;
+}
+
+//====Comparison Slider=====//
+
+.img-comp-container {
+    position: relative;
+    height: 200px; /*should be the same height as the images*/
+  }
+  
+  .img-comp-img {
+    position: absolute;
+    width: auto;
+    height: auto;
+    overflow: hidden;
+  }
+  
+  .img-comp-img img {
+    display: block;
+    vertical-align: middle;
+    margin:0 auto;
+  }
+  
+  .img-comp-slider {
+    position: absolute;
+    z-index: 9;
+    cursor: ew-resize;
+    /*set the appearance of the slider:*/
+    width: 40px;
+    height: 40px;
+    background-color: #2196F3;
+    opacity: 0.7;
+    border-radius: 50%;
+  }
+
+  .img-comp-img img {
+        display: block;
+        vertical-align: middle;
+        height: 350px;
+        object-fit:cover;
+        width: 500px;
+    }
+
+    .second-slider{
+        flex-basis:48%;
+    }
+
+    nav div{
+        margin:0;
+    }
+
+    .col-md-2{
+        padding:0;
+    }
+
+    .nav-item{
+        text-align:center;
+    }
+
+    .show>.btn-secondary.dropdown-toggle:focus{
+        box-shadow:none;
+    }
+
+@media (max-width:990px){
+    .dropdown-menu{
+        transform:none !important;
+        margin:0 auto;
+    }
+
+    .search-form{
+        display: flex;
+        justify-content: center !important;
+    }
+    
+    .navbar-nav{
+        background:#fff;
+        padding-right:0;
+        width: 100vw;
+    }
+
+    .site-header button, body .site-header a, .show>.btn-secondary.dropdown-toggle{
+        color:#000;
+    }
+
+    .nav-item{
+        padding: 15px 0;
+    }
+
+    .dropdown-toggle{
+        width:100%;
+        &:hover{
+            color:#000;
+        }
+    }
+
+    .main-logo{
+        display:none;
+    }
+
+    .before-after-wrapper{
+        display:block !important;
+    }
+
+    .set-1{
+        margin-top: 43%;
+    }
+}
+
+.fade-logos-wrap{
+    margin-left:50px;
+}
+
+.splash-btn-wrap{
+    height:150px;
+    overflow:hidden;
+    display:flex;
+    padding-top: 50px;
+        a{
+            position:relative;
+            top:200px;
+            opacity:0;
+            box-sizing: border-box;
+            appearance: none;
+            background-color: transparent;
+            border: 2px solid $mainColor;
+            border-radius: 0.6em;
+            color: $mainColor;
+            display: flex;
+            align-self: center;
+            font-size: 1rem;
+            font-weight: 400;
+            line-height: 1;
+            margin: 20px;
+            text-decoration: none;
+            text-align: center;
+            font-weight: 700;
+            &:hover{
+                text-decoration:none;
+            }
+        }
+}
+
+.splash-btn-wrap a{
+    border-color: $mainColor;
+    // border: 0;
+    border-radius: 0;
+    color: $mainColor;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    transition: color 150ms ease-in-out;
+    
+    &:after {
+      content: '';
+      position: absolute;
+      display: block;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 0;
+      height: 100%;
+      background: $mainColor;
+      z-index: -1;
+      transition: width 0.6s cubic-bezier(0.86, 0, 0.07, 1);
+    }
+    
+    &:hover {
+      color: #fff;
+      &:after {
+        width: 110%;
+      }
+    }
+  }
+
+  .page-template-behind-scenes-page{
+      h3{
+          margin-top:50px;
+      }
+
+  }
+
+  .anne-info-wrapper{
+      opacity:0;
+  }
+  
