--- a/sass/_single-post.scss
+++ b/sass/_single-post.scss
@@ -61,6 +61,12 @@
         margin: 25px;
     }
 
+    .mail-wrapper{
+        background: #e8e8e8;
+        border-radius: 15px;
+        margin: 20px 0;
+    }
+
     h4{
         font-family:$mainFont;
         margin:10px 0;
