--- a/sass/_home-new.scss
+++ b/sass/_home-new.scss
@@ -59,6 +59,8 @@
         font-family:Arial, Helvetica, sans-serif;
         text-transform:uppercase;
         text-align:center;
+        opacity:0;
+        transform:translate(100px)
     }
 
     .flickity-viewport{
