--- a/sass/_characters.scss
+++ b/sass/_characters.scss
@@ -1,9 +1,27 @@
 .page-template-characters-page{
 
+    .col-md-4{
+        @include mobile{
+            margin-bottom:20px;
+        }
+    }
+
+    .site-header button, .site-header a{
+        color:#000;
+    }
+
+    .show>.btn-secondary.dropdown-toggle{
+        color:#000;
+    }
+
+
     #main-heading{
         line-height: 38px;
         font-size: 29px;
         margin: 50px 0;
+        @include mobile{
+            margin-top:30px !important;
+        }
     }
     h3{
         font-family:'trajan-regular-pro';
@@ -20,6 +38,9 @@
 
     .character-single{
         margin: 60px 0;
+        @include mobile{
+            margin-top:0;
+        }
     }
 
     section .character-quote:first-child{
@@ -30,6 +51,27 @@
         font-family: 'trajan-regular-pro';
         font-size: 18pt;
         display:inline-block;
+    }
+
+    .c-hero__image{
+        width:100%;
+    }
+
+    .col-md-4 img{
+        width: 100%;
+        height: auto;
+    }
+
+    header{
+        position:static;
+    }
+
+    @media (max-width:990px){
+        #main-heading{
+            line-height: 22px;
+            font-size: 15px;
+            margin-top: 150px;
+        }
     }
 
 }
