--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,3 +2,12 @@ $mainFont:'trajan-regular-pro';
 $subFont: Arial, Helvetica, sans-serif;
 
 $mainColor:#41ad49;
+
+
+// Mixins
+
+@mixin mobile {
+    @media (max-width: 990px) {
+      @content;
+    }
+}
