--- a/sass/_original.scss
+++ b/sass/_original.scss
@@ -13,8 +13,8 @@
 
 html body .page .film-wrapper a, .shop-btn, .film-wrapper button{
     font-family:Arial, Helvetica, sans-serif;
-    background: #41ad49;
-    border: 2px solid #41ad49;
+    background: $mainColor;
+    border: 2px solid $mainColor;
     color: #fff;
     display: flex;
     justify-content: center;
@@ -24,7 +24,7 @@ html body .page .film-wrapper a, .shop-btn, .film-wrapper button{
     height: 45px;
     border-radius: 5px;
     margin: 0 20px;
-    border-bottom: 2px solid #41ad49 !important;
+    border-bottom: 2px solid $mainColor !important;
     font-weight: bold;
     text-transform: uppercase;
     text-align:center;
@@ -32,9 +32,9 @@ html body .page .film-wrapper a, .shop-btn, .film-wrapper button{
 }
 
 .film-wrapper a:hover, .shop-btn, .read-more{
-    border:2px solid #41ad49;
+    border:2px solid $mainColor;
     background:transparent !important;
-    color:#41ad49 !important;
+    color:$mainColor !important;
 }
 
 .article__content a:not([class]){
@@ -95,7 +95,7 @@ html body .page .film-wrapper a, .shop-btn, .film-wrapper button{
 }
 
 .section-header{
-    font-family: 'trajan-regular-pro';
+    font-family: $mainFont;
     text-align: center;
     font-size: 36px;
     margin-bottom: 20px;
@@ -158,7 +158,7 @@ html body .page .film-wrapper a, .shop-btn, .film-wrapper button{
     position: absolute;
     z-index: 10;
     bottom:100%;
-    background-image: -webkit-linear-gradient(-45deg, rgb(64, 173, 72) 0%, rgba(52, 59, 76, 0.89) 50%, rgb(64, 173, 72) 100%);
+    background: $mainColor;
     opacity: 1;
     width: 100%;
     height: 100%;
@@ -170,7 +170,7 @@ html body .page .film-wrapper a, .shop-btn, .film-wrapper button{
 
 .recent-head{
     text-align: center;
-    font-family: 'trajan-regular-pro';
+    font-family: $mainFont;
     font-size: 40px;
 }
 
@@ -191,7 +191,7 @@ html{
 }
 
 .costume-text-1 h3, .costume-text-2 h3, .trajan{
-    font-family:'trajan-regular-pro';
+    font-family:$mainFont;
     color:#000;
 }
 
@@ -241,14 +241,14 @@ html{
 }
 
 .anne-info p{
-    font-family:'trajan-regular-pro';
+    font-family:$mainFont;
     margin-bottom:5px;
     color:#fff;
 }
 
 .anne-head{
     font-size:20px;
-    font-family:'trajan-regular-pro';
+    font-family:$mainFont;
     color:#fff;
 }
 
@@ -300,7 +300,7 @@ ul.costume-list{
    margin-bottom: -8px;
     font-size: 12px;
     padding: 9px;
-    font-family: 'trajan-regular-pro';
+    font-family: $mainFont;
 }
 
 .home .navigation #menu-main-menu a{
@@ -373,7 +373,7 @@ ul.costume-list{
 
 #gazebo-btn{
     background:transparent;
-    color:#41ad49;
+    color:$mainColor;
     transition:all 0.3s linear;
     font-size:16px;
     text-decoration:none;
@@ -381,7 +381,7 @@ ul.costume-list{
 
 a#gazebo-btn:hover{
     color:#fff !important;
-    background:#41ad49 !important;
+    background:$mainColor !important;
 }
 
 .home .headroom--not-top .navigation #menu-main-menu a{
@@ -424,7 +424,7 @@ a#gazebo-btn:hover{
 }
 
 .product-heading{
-    font-family:'trajan-regular-pro';
+    font-family:$mainFont;
     text-align:center;
     font-size:36px;
     letter-spacing:3px;
@@ -445,11 +445,11 @@ a#gazebo-btn:hover{
 
 html body .page .film-wrapper .home-shop{
     background:transparent;
-    color:#41ad49;
+    color:$mainColor;
 }
 
 html body .page .film-wrapper .home-shop:hover{
-    background:#41ad49 !important;
+    background:$mainColor !important;
     color:#fff !important;
 }
 
@@ -473,7 +473,7 @@ html body .page .film-wrapper .home-shop:hover{
 }
 
 .cd-image-label{
-    font-family:'trajan-regular-pro';
+    font-family:$mainFont;
 }
 
 .carousel-slider-outer-832 .carousel-slider__item{
@@ -492,7 +492,7 @@ html body .page .film-wrapper .home-shop:hover{
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    font-family: 'trajan-regular-pro';
+    font-family: $mainFont;
 }
 
 .carousel-slider-outer-832 .carousel-slider__item:hover .carousel-slider__caption{
@@ -505,7 +505,7 @@ html body .page .film-wrapper .home-shop:hover{
 }
 
 .page-id-69 .film-wrapper a:hover{
-    color:#41ad49 !important;
+    color:$mainColor !important;
     background:transparent;
 }
 
@@ -822,13 +822,13 @@ html body .page .film-wrapper .home-shop:hover{
 }
 
 .article__title a{
-	font-family:'trajan-regular-pro';
+	font-family:$mainFont;
 	font-weight:lighter;
 }
 
 .blog h1{
     text-align:left;
-    font-family:'trajan-regular-pro';
+    font-family:$mainFont;
     font-weight:lighter;
     margin-bottom:0;
     font-size:40px;
@@ -885,7 +885,7 @@ html body .page .film-wrapper .home-shop:hover{
 }
 
 .home .navigation #menu-main-menu a:hover{
-    color:#41ad49;
+    color:$mainColor;
 }
 .page-id-184 h3{
      margin-top: 0; 
@@ -1122,7 +1122,7 @@ html body .page .film-wrapper .home-shop:hover{
 }
 
 .article__title{
-    font-family:'trajan-regular-pro';
+    font-family:$mainFont;
     font-weight:lighter;
     text-align: center;
 }
@@ -1133,7 +1133,7 @@ html{
 
 
 .content-wrapper h3, .post .article__title, .post .latest-comments__title{
-    font-family:'trajan-regular-pro';
+    font-family:$mainFont;
 }
 
 .postid-16191 .article__featured-image img{
@@ -1153,7 +1153,7 @@ html body .page  .film-wrapper.long-btn a{
 
 .post-template-default .article__content h3{
     font-size: 20px;
-    font-family: 'trajan-regular-pro';
+    font-family: $mainFont;
 }
 
 .single-post .article__content h3:first-child{
@@ -1273,7 +1273,7 @@ html body .page  .film-wrapper.long-btn a{
 }
 
 .home a{
-    color:#41ad49;
+    color:$mainColor;
 }
 
 .contest-p{
@@ -1286,7 +1286,7 @@ html body .page  .film-wrapper.long-btn a{
 }
 
 a{
-    color:#41ad49;
+    color:$mainColor;
 }
 
 img.contest-img{
@@ -1358,7 +1358,7 @@ button.mfp-arrow-left, button.mfp-arrow-right{
     border: 1px solid #ddd;
     padding: 0 26px;
     text-transform: uppercase;
-    color: #41ad49;
+    color: $mainColor;
     height: 39.9915px;
     display: flex;
     align-items: center;
@@ -1373,7 +1373,7 @@ button.mfp-arrow-left, button.mfp-arrow-right{
 }
 
 .archive.category .archive__title{
-    font-family:'trajan-regular-pro';
+    font-family:$mainFont;
 }
 
 .category-recipes{
@@ -1417,8 +1417,8 @@ button.mfp-arrow-left, button.mfp-arrow-right{
     text-align: center;
     transition: all 0.6s linear;
     color: #fff;
-    font-family:'trajan-regular-pro';
-    background:#41ad49;
+    font-family:$mainFont;
+    background:$mainColor;
     padding-top:45px;
 }
 
@@ -1492,7 +1492,7 @@ button.mfp-arrow-left, button.mfp-arrow-right{
 }
 
 .postid-31952 span{
-    font-family: 'trajan-regular-pro';
+    font-family: $mainFont;
     font-size: 52px;
 }
 
@@ -1502,11 +1502,11 @@ button.mfp-arrow-left, button.mfp-arrow-right{
     background: #fff;
     width: 69%;
     margin: 0 auto;
-    color:#41ad49;
+    color:$mainColor;
     border-radius: 49px;
     padding: 15px 0;
     box-shadow: 10px;
-    font-family:'trajan-regular-pro';
+    font-family:$mainFont;
     box-shadow: -6px 3px 26px 0 rgba(0,0,0,.11);
 }
 
@@ -1624,9 +1624,6 @@ button.mfp-arrow-left, button.mfp-arrow-right{
         height: auto !important;
     }
     
-    .c-hero__background{
-        position:fixed !important;
-    }
     .anne-info-wrapper:hover img{
         transform:scale(1);
         filter: blur(0);
@@ -1795,8 +1792,8 @@ button.mfp-arrow-left, button.mfp-arrow-right{
 }
 
 .film-wrapper a{
-  background: #41ad49;
-  border: 2px solid #41ad49;
+  background: $mainColor;
+  border: 2px solid $mainColor;
   color: #fff;
   display: flex;
   justify-content: center;
@@ -1806,7 +1803,7 @@ button.mfp-arrow-left, button.mfp-arrow-right{
   height: 45px;
   border-radius: 5px;
   margin: 0 20px;
-  border-bottom: 2px solid #41ad49 !important;
+  border-bottom: 2px solid $mainColor !important;
   font-weight: bold;
   text-transform: uppercase;
   text-align:center;
