--- a/sass/_single-post.scss
+++ b/sass/_single-post.scss
@@ -1,4 +1,17 @@
-.single-post{
+.single{
+    font-family: 'Lato', sans-serif;
+    .site-header button, .site-header a{
+        color:#000;
+    }
+
+
+    .blog-content{
+        line-height: 1.5;
+    }
+
+    strong{
+        font-family:$mainFont;
+    }
     
     header{
         position:static;
@@ -10,8 +23,10 @@
     }
 
     .blog-img img{
-        width:100%;
-        margin:40px 0;
+        width: 100%;
+        margin: 40px 0;
+        max-height: 400px;
+        object-fit: cover;
     }
 
     .single-post-wrap{
@@ -19,10 +34,13 @@
     }
 
     h3{
-        font-family:$mainFont;
-        margin: 40px 0;
-        font-size: 21px;
+        font-family: $mainFont;
+        margin: 30px 0;
+        text-align:center;
+        font-size: 18px;
         font-weight: bold;
+        border-top: 1px solid rgba(98, 92, 75, 0.3);
+        padding-top: 30px;
     }
 
     .inner-social{
@@ -63,8 +81,9 @@
 
     .mail-wrapper{
         background: #e8e8e8;
-        border-radius: 15px;
         margin: 20px 0;
+        border-bottom: 1px solid rgba(98,92,75,.3);
+        border-top: 1px solid rgba(98,92,75,.3);
     }
 
     h4{
@@ -89,6 +108,7 @@
 
     .recent{
         margin:10px 0;
+        font-size:12px;
     }
 
     .cat-item{
@@ -107,18 +127,41 @@
         box-shadow: -6px 3px 26px 0 rgba(0,0,0,.11);
         color: #8b8989;
         font-family:$mainFont;
+        transition:all 0.3s linear;
+        &:hover{
+            transform:scale(1.2);
+        }
     }
 
     .single-blog-meta{
-        margin:40px 0;
+        margin-bottom:40px;
     }
 
     hr{
-        background:#41ad49;
+        background:$mainColor;
         width:100%vw;
     }
-    
 
+    .blog-content img{
+        display:block;
+        margin: 20px auto;
+    }
+
+    i{
+        transition:all 0.3s linear;
+    }
+
+    .fa-facebook-f:hover{
+        background:#4267b2;
+    }
+
+    .fa-instagram:hover{
+        background:#ed4956;
+    }
+
+    .fa-twitter:hover{
+        background:#1da1f2;
+    }
    
 
 }
