resized behind scenes iamges

--- a/sass/_original.scss
+++ b/sass/_original.scss
@@ -1836,3 +1836,6 @@ header{
     height: 100%;
 }
 
+.costume-text-1 .before-after-wrapper img, .costume-text-2 .before-after-wrapper img{
+    width:100%;
+}
