--- a/style.css
+++ b/style.css
@@ -2033,6 +2033,9 @@ header {
   width: 100%;
   height: 100%; }
 
+.costume-text-1 .before-after-wrapper img, .costume-text-2 .before-after-wrapper img {
+  width: 100%; }
+
 @media (max-width: 990px) {
   .page-template-characters-page .col-md-4 {
     margin-bottom: 20px; } }
