--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -1,4 +1,10 @@
 .blog{
+
+
+    p{
+        font-size:12px;
+        line-height:1.4;
+    }
     #blog-wrap{
         margin:0 auto;
         img{
@@ -7,8 +13,9 @@
         }
 
         .cat-name{
-            font-family:'trajan-regular-pro';
+            font-family:$mainFont;
             margin-bottom:13px;
+            font-size:17px;
         }
 
         .blog-item{
@@ -18,28 +25,41 @@
                     font-weight: bold;
                     margin: 20px 0;
                     font-family:$mainFont;
+                    line-height:1.2;
+                  
                 }
         }
+    }
+
+    .blog-bg:before{
+        content:'';
+        position:absolute;
+        background:rgba(0,0,0,0.6);
+        width:100%;
+        height:100%;
+
     }
 
     .blog-bg{
         display:flex;
         align-items: center;
         height:500px;
+        position:relative;
         width:100vw;
         background:url('./static-images/anne-blog-bg.jpg');
             h2{
                 font-size:44px;
-                font-family: 'trajan-regular-pro';
+                font-family: $mainFont;
                 color: #fff;
                 font-weight:bold;
                 width:100vw;
                 text-align:center;
+                z-index: 1;
             }
     }
 
     hr{
-        background: #41ad49;
+        background: $mainColor;
         height: 2.5px;
         border-radius: 5px;
         max-width:1045px;
@@ -48,7 +68,7 @@
     .latest{
         max-width: 1045px;
         margin: 0 auto;
-        font-family: 'trajan-regular-pro';
+        font-family: $mainFont;
         font-weight: bold;
         font-size: 35px;
         color: #28a745;
@@ -91,10 +111,12 @@
     }
 
     .cat-dropdown a{
-        color: #41ad49;
+        color: $mainColor;
         margin: 12px 0;
         display: inline-block;
     }
+
+    
 
     
 
