--- a/sass/_characters.scss
+++ b/sass/_characters.scss
@@ -1,5 +1,14 @@
 .page-template-characters-page{
 
+    .site-header button, .site-header a{
+        color:#000;
+    }
+
+    .show>.btn-secondary.dropdown-toggle{
+        color:#000;
+    }
+
+
     #main-heading{
         line-height: 38px;
         font-size: 29px;
@@ -30,6 +39,27 @@
         font-family: 'trajan-regular-pro';
         font-size: 18pt;
         display:inline-block;
+    }
+
+    .c-hero__image{
+        width:100%;
+    }
+
+    .col-md-4 img{
+        width: 100%;
+        height: auto;
+    }
+
+    header{
+        position:static;
+    }
+
+    @media (max-width:990px){
+        #main-heading{
+            line-height: 22px;
+            font-size: 15px;
+            margin-top: 150px;
+        }
     }
 
 }
