fixed buttons mobile

--- a/sass/_home-new.scss
+++ b/sass/_home-new.scss
@@ -133,6 +133,7 @@
     @media (max-width:700px){
         .splash-btn-wrap{
             flex-direction: column;
+            height:100vw;
             a{
                 width:65vw;
             }
