added mobile image

--- a/style.css
+++ b/style.css
@@ -1329,7 +1329,7 @@ html body .page .film-wrapper .home-shop:hover {
   .costume-head {
     padding-top: 0; }
   .vidbg-container {
-    background-image: url("https://anneofgreengables.com/wp-content/uploads/2018/04/anne_mobile-image.jpg"); }
+    background-image: url("https://anneofgreengables.com/wp-content/uploads/2018/09/anne_mobile-image.jpg") !important; }
   #main-list {
     padding-bottom: 0; } }
 
