--- a/sass/_original.scss
+++ b/sass/_original.scss
@@ -984,7 +984,7 @@ html body .page .film-wrapper .home-shop:hover{
     }
     
     .vidbg-container{
-        background-image:url('https://anneofgreengables.com/wp-content/uploads/2018/04/anne_mobile-image.jpg');
+        background-image:url('https://anneofgreengables.com/wp-content/uploads/2018/09/anne_mobile-image.jpg') !important;
     }
     
     #main-list{
